load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_uv//uv:venv.bzl", "create_venv")

pip_compile(
    name = "requirements",
    requirements_in = select({
        "@platforms//os:macos": "requirements-darwin.txt",
        "@platforms//os:linux": "requirements-linux.txt", 
    }),
    requirements_txt = select({
        "@platforms//os:macos": "requirements-darwin.lock",
        "@platforms//os:linux": "requirements-linux.lock",
    }),
    visibility = ["//visibility:public"],
)

create_venv(
    name = "venv",
    requirements_txt = select({
        "@platforms//os:macos": ":requirements-darwin.lock",
        "@platforms//os:linux": ":requirements-linux.lock", 
    }),
    destination_folder = ".venv",
)