load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_uv//uv:defs.bzl", "uv_binary", "uv_pip_compile")

py_library(
    name = "lib",
    srcs = glob(["torches/*.py"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "app",
    main = "torches/app.py",
    deps = [":lib"],
    visibility = ["//visibility:public"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["./app"],
    tars = [":app"],
    env = {
        "CUDA_VISIBLE_DEVICES": "0",
        "TORCH_CUDA_ARCH_LIST": "7.5;8.0;8.6",
    },
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["torches:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/solanyn/torches",
)
