load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_image_layer")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@torches_deps//:requirements.bzl", "requirement")

py_library(
    name = "lib",
    srcs = glob(["torches/*.py"]),
    deps = [
        requirement("pytorch"),
        requirement("torchvision"),
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "app",
    main = "torches/app.py",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
)

py_image_layer(
    name = "layers",
    binary = ":app",
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["./app"],
    tars = [":layers"],
    env = {
        "CUDA_VISIBLE_DEVICES": "0",
        "TORCH_CUDA_ARCH_LIST": "7.5;8.0;8.6",
    },
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["torches:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/solanyn/torches",
)
