[project]
name = "vgc"
version = "0.1.0"
description = "VGC competitive meta analysis and team builder"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=18.0.0",
    "pyiceberg>=0.11.0",
    "polars>=1.0.0",
    "httpx>=0.27.0",
    "marimo>=0.23.0",
    "yt-dlp>=2024.0.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sources", "calc", "schema", "teambuilder", "publish"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
